# vigiles-aeternae--agon-cosmogonicum

./: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  VIGILES.md  network-map.yaml  pyproject.toml  seed.yaml
.github/: release-drafter.yml
chronicles/: chronicle-2026-03-20.jsonl
colosseum/: COLOSSEUM.md  regime-schema.yaml
constitutional/: README.md
integration/: README.md
orders/: ORDER-SYSTEM-MAP.md  ORDERS.md  order-schema.yaml  ordo-architectorum.yaml  ordo-demiurgorum.yaml  ordo-fabrorum-recursivorum.yaml  ordo-nataraja.yaml  ordo-psychopomporum.yaml  ordo-seraphorum.yaml  ordo-sibyllarum.yaml  ordo-testium-aeternum.yaml
regimes/: abrahamic--covenantal-hierarchy.yaml  african--distributed-divination.yaml  daoist--effortless-alignment.yaml  discworld--narrative-causality.yaml  dreamtime--participatory-creation.yaml  dune--prophylactic-tyranny.yaml  egyptian--ritual-maintenance.yaml  foundation--stochastic-governance.yaml  greek-roman--succession-governance.yaml  hindu-buddhist--dharmic-cycle.yaml  jojo--willpower-succession.yaml  lost--custodial-selection.yaml  lynch--permeability-collapse.yaml  malazan--pressure-ascendancy.yaml  marvel-cosmic--hierarchical-jurisdiction.yaml  matrix--program-hierarchy.yaml  mesoamerican--metabolic-exchange.yaml  norse--defiant-stewardship.yaml  one-piece--distributed-truth.yaml  tolkien--delegated-authority.yaml  wot--balance-and-taint.yaml  zelda--recursive-triadic.yaml
tests/: test_auditor.py  test_chronicle.py  test_consensus.py  test_divergence.py  test_orders.py  test_phaethon.py  test_regime.py  test_reporter.py
(+12 files in other folders)
