[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vigiles-engine"
version = "0.1.0"
description = "Vigiles Aeternae — Agon Cosmogonicum: mythological governance simulation engine"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
vigiles = "vigiles_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/vigiles_engine/cli.py" = ["E501"]
"src/vigiles_engine/reporter.py" = ["E501"]
"src/vigiles_engine/auditor.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
